# CMakeSubprojects

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  main.cpp
Project1/: CMakeLists.txt  main.cpp
Project1/include/: erf.hpp
Project1/src/: erf.cpp
Project2/: CMakeLists.txt  main.cpp
Project2/include/: cos.hpp
Project2/src/: cos.cpp
Project3/: CMakeLists.txt  main.cpp
Project3/include/: sin.hpp
Project3/src/: sin.cpp
